--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Commandline tool to index YouTube videos into Algolia",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "./scripts/test",
     "test:watch": "./scripts/test-watch",
@@ -27,8 +28,9 @@
   },
   "homepage": "https://github.com/algolia/talksearch-scraper#readme",
   "dependencies": {
-    "algoliasearch": "3.32.0",
-    "axios": "0.17.1",
+    "algolia-indexing": "1.3.0",
+    "algoliasearch": "4.20.0",
+    "axios": "0.21.1",
     "bluebird": "3.5.3",
     "chalk": "2.4.2",
     "cheerio": "1.0.0-rc.2",
@@ -36,6 +38,7 @@
     "dotenv": "4.0.0",
     "glob": "7.1.3",
     "json-stable-stringify": "1.0.1",
+    "lexed": "^1.0.10",
     "lodash": "4.17.11",
     "mkdirp": "0.5.1",
     "multi-progress": "2.0.0",
@@ -54,12 +57,11 @@
     "@babel/node": "7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "7.2.0",
     "@babel/preset-env": "7.2.3",
-    "@google-cloud/language": "1.2.0",
-    "algolia-indexing": "0.0.6",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "8.2.6",
     "babel-jest": "23.6.0",
     "babel-plugin-dynamic-import-node-sync": "2.0.1",
+    "chai": "^4.3.8",
     "eslint": "4.19.1",
     "eslint-config-algolia": "13.2.3",
     "eslint-config-prettier": "2.10.0",
@@ -68,8 +70,9 @@
     "eslint-plugin-prettier": "2.7.0",
     "husky": "0.14.3",
     "inquirer": "6.2.1",
-    "jest": "23.6.0",
-    "prettier": "1.15.3",
+    "jest": "^29.7.0",
+    "mocha": "^10.2.0",
+    "prettier": "^3.0.3",
     "slugify": "1.3.4",
     "uuid": "3.3.2"
   }
