--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "index:cache": "READ_FROM_CACHE=1 babel-node ./scripts/index.js",
     "index:logs": "WRITE_RESPONSE_LOGS=1 babel-node ./scripts/index.js",
     "new:config": "babel-node ./scripts/new-config.js",
-    "thumbnails": "./scripts/thumbnails i-p9lWIhcLQ",
-    "prepush": "yarn test"
+    "thumbnails": "./scripts/thumbnails i-p9lWIhcLQ"
   },
   "repository": {
     "type": "git",
